@@ -69,14 +69,13 @@ func (h handler) CompareAndSwap(ctx context.Context, body wire.Value) (yarpcthri
 		return yarpcthrift.Response{}, err
 	}
 
-	err := h.impl.CompareAndSwap(ctx, args.Request)
+	appErr := h.impl.CompareAndSwap(ctx, args.Request)
 
-	appErr := err
-	result, err := atomic.Store_CompareAndSwap_Helper.WrapResponse(err)
+	result, err := atomic.Store_CompareAndSwap_Helper.WrapResponse(appErr)
 
 	var response yarpcthrift.Response
 	if err == nil {
-		response.ApplicationError = appErr
+		response.Exception = appErr
 		response.Body = result
 	}
 	return response, err
@@ -88,14 +87,13 @@ func (h handler) Increment(ctx context.Context, body wire.Value) (yarpcthrift.Re
 		return yarpcthrift.Response{}, err
 	}
 
-	err := h.impl.Increment(ctx, args.Key, args.Value)
+	appErr := h.impl.Increment(ctx, args.Key, args.Value)
 
-	appErr := err
-	result, err := atomic.Store_Increment_Helper.WrapResponse(err)
+	result, err := atomic.Store_Increment_Helper.WrapResponse(appErr)
 
 	var response yarpcthrift.Response
 	if err == nil {
-		response.ApplicationError = appErr
+		response.Exception = appErr
 		response.Body = result
 	}
 	return response, err
